# agentml

./: AGENT.agent  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  agentml.schema.json
.agentml/: brief.md  context.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_integration_request.md  bug_report.md  feature_request.md  feedback.md  template_request.md
.github/workflows/: agentml-self-check.yml  pages.yml
docs/: _config.yml  adoption-proof.md  adoption.md  agent-prompts.md  ci.md  dogfooding.md  examples.md  index.html  launch-post.md  launch-v0.1.2.md  mcp.md  quickstart.md  release-notes-v0.1.0.md  release.md  security.md  skills.md  spec.md  syntax.md  templates.md
docs/_layouts/: default.html
docs/_sass/: main.scss
examples/basic/: AGENT.agent
examples/dangerous-change-demo/: AGENT.agent  AGENTS.md  README.md  (+2 more)
skills/: agentml-contract-validator.skill  agentml-validator.skill  diff-risk-auditor.skill  docs-sync.skill  mcp-server-maintainer.skill  nextjs-maintainer.skill  node-package-maintainer.skill  python-package-maintainer.skill  release-auditor.skill  repo-maintainer.skill  rust-cli-maintainer.skill  security-auditor.skill  skill-author.skill  spec-writer.skill  task-closure.skill
src/: cli.rs  detect.rs  lib.rs  main.rs  mcp.rs  parser.rs  types.rs  validator.rs
tests/: agents_md.rs  close_tests.rs  contract_validation.rs  diff_audit.rs  doctor_checks.rs  dogfood_self_check.rs  examples_validation.rs  mcp_tests.rs  mod.rs  native_syntax.rs  skill_validation.rs
(+49 files in other folders)
