[package]
name = "agentml"
version = "0.1.2"
edition = "2024"
description = "AI-native markup language and CLI for agent execution contracts"
license = "MIT"
repository = "https://github.com/Nom-nom-hub/agentml"
readme = "README.md"
keywords = ["ai", "agent", "contract", "cli", "markup"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "agentml"
path = "src/lib.rs"

[[bin]]
name = "agentml"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
colored = "3"
sha2 = "0.10"
base64 = "0.22"
tar = "0.4"
flate2 = "1"
walkdir = "2"
